Fix apply button, selector close on mobile
- Use events from mat-select to check if predifined range selector is
open on mobile. If it is, do not close calendar when clicking off of
selector.
- The apply button in the daterange component wasn't properly linked
(missing click event)

--- a/src/app/daterange-picker/daterange-picker/ang.daterange.picker.component.scss
+++ b/src/app/daterange-picker/daterange-picker/ang.daterange.picker.component.scss
@@ -4,7 +4,7 @@
 	top: 0;
 	heigth: 100vh;
 	width: 100vw;
-  z-index: 10000;
+  z-index: 100;
   .mat-card {
     display: flex;
     flex-direction: column;
